Update helping links

--- a/donate.html
+++ b/donate.html
@@ -19,8 +19,9 @@ hosting... </p>
 <p>You can show your appreciation and support further development and maintaining by contributing with
 <a href="/en/Issues.html">bugreporting</a>,
 <a href="#funding">funding (look below)</a>,
-<a href="https://github.com/ConEmu/ConEmu.github.io">documentation</a>,
-<a href="https://github.com/Maximus5/ConEmu">code</a>
+<a href="https://github.com/ConEmu/ConEmu.github.io">helping with documentation</a>,
+<a href="https://github.com/Maximus5/ConEmu">coding</a>,
+<a href="/en/Awards.html#Voting">voting</a>
 or anything else, spreading the word for example. </p>
 
 
