--- a/en/Awards.html
+++ b/en/Awards.html
@@ -11,7 +11,7 @@
 <p><!-- &lt;wiki:gadget url=&quot;http://www.ohloh.net/p/376210/widgets/project_users.xml&quot; height=&quot;100&quot; border=&quot;0&quot;/&gt; --> </p>
 <p><a href="https://www.ohloh.net/p/conemu-maximus5" rel="nofollow"><img src="https://www.ohloh.net/images/logo/ohloh_hub.png" alt="Use it on ohloh.net"></img></a> </p>
 
-<h3><a name="Please,_vote_for_ConEmu"></a>Please, vote for ConEmu<a href="#Please,_vote_for_ConEmu" class="section_anchor"></a></h3>
+<h3><a name="Voting"></a><a name="Please,_vote_for_ConEmu"></a>Please, vote for ConEmu<a href="#Voting" class="section_anchor"></a></h3>
 <p><!-- &lt;a href=&quot;http://www.ohloh.net/stack_entries/new?project_id=conemu-maximus5&amp;ref=sample&quot;&gt;Ohloh&lt;/a&gt;,
  &lt;a href=&quot;http://redd.it/11k5oy&quot;&gt;Reddit&lt;/a&gt;,
  --> <a href="http://alternativeto.net/software/conemu/" rel="nofollow">alternativeTo</a>, <a href="https://www.ohloh.net/p/conemu-maximus5/reviews" rel="nofollow">Ohloh</a>, <a href="https://sourceforge.net/projects/conemu/reviews/" rel="nofollow">SourceForge</a>, <a href="http://www.facebook.com/ConEmu.Maximus5" rel="nofollow">Facebook</a>, </p>
