--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -1,13 +1,28 @@
 ---
 ---
 
+<h1>ConEmu changes log</h1>
+<p>New ConEmu builds arrives often, at least weekly.
+It's recommended to enable <a href="SettingsUpdate.html">Automatic Update</a>
+to get <a href="StableVsPreview.html">Preview or Alpha</a> builds as soon
+as they will be released.
+</p>
+
+<h2>Any contributions are appreciated</h2>
+<p>ConEmu-Maximus5 was brought to life and is supported by almost single developer efforts.
+The most valuable resource is time actually, hundreds of hours.
+You can show your appreciation and support further development and maintaining by contributing with
+<a href="Issues.html">bugreporting</a>,
+<a href="/donate.html#funding">funding</a>,
+<a href="https://github.com/ConEmu/ConEmu.github.io">helping with documentation</a>,
+<a href="https://github.com/Maximus5/ConEmu">coding</a>,
+<a href="Awards.html#Voting">voting</a>
+or anything else, spreading the word for example.
+</p>
+
 {% raw %}
 
 <!-- Content starts -->
-
-<p>You can show your appreciation and support future development by donating. <a href="http://conemu.github.io/donate.html" rel="nofollow">Donate</a> button located on <a href="http://code.google.com/p/conemu-maximus5" rel="nofollow">main page</a> under ConEmu sketch (upper right of page). </p>
-<p>Votes and awards (vote for ConEmu, if you please) <a href="http://code.google.com/p/conemu-maximus5/wiki/Awards" rel="nofollow">http://code.google.com/p/conemu-maximus5/wiki/Awards</a> </p>
-
 
 <h2><a name="Build_150331"></a>Build 150331<a href="#Build_150331" class="section_anchor"></a></h2>
 <ul><li>gh#88: Allow ‘Apps’ key to use as single hotkey. </li>
