--- a/ru/Whats_New.html
+++ b/ru/Whats_New.html
@@ -1,7 +1,7 @@
 ---
 ---
 
-<h1>ConEmu changes log</h1>
+<h1 id="h0">ConEmu changes log</h1>
 <p>New ConEmu builds arrives often, at least weekly.
 It's recommended to enable <a href="SettingsUpdate.html">Automatic Update</a>
 to get <a href="StableVsPreview.html">Preview or Alpha</a> builds as soon
