--- a/ru/GuiMacro.html
+++ b/ru/GuiMacro.html
@@ -365,7 +365,7 @@ HighlightMouse(&lt;What&gt;,&lt;Act&gt;)
    Type=3: set indeterminate state in progress</code>
 
 <h4><a name="Recreate"></a>Create new or restart active tab or pane<a href="#Recreate" class="section_anchor"></a></h4>
-<code>Recreate(<Action>[,<Confirm>[,<AsAdmin>]]), alias "Create"
+<code>Recreate(&lt;Action&gt;[,&lt;Confirm&gt;[,&lt;AsAdmin&gt;]]), alias "Create"
  - Create new tab or restart existing one
     Action: 0 - create tab, 1 - restart tab, 2 - create window
     Confirm: 1 - show ‘Create new console’ dialog, 0 - don't show
