--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@ title: ConEmu - search page
 <gcse:search></gcse:search>
 -->
 
-<form action="conemu.github.io" id="cse-search-box">
+<form action="//conemu.github.io/search_results.html" id="cse-search-box">
   <div>
     <input type="hidden" name="cx" value="partner-pub-8810818700876198:9821569667" />
     <input type="hidden" name="cof" value="FORID:10" />
@@ -31,15 +31,5 @@ title: ConEmu - search page
 </form>
 
 <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
-
-<div id="cse-search-results"></div>
-<script type="text/javascript">
-  var googleSearchIframeName = "cse-search-results";
-  var googleSearchFormName = "cse-search-box";
-  var googleSearchFrameWidth = 800;
-  var googleSearchDomain = "www.google.com";
-  var googleSearchPath = "/cse";
-</script>
-<script type="text/javascript" src="http://www.google.com/afsonline/show_afs_search.js"></script>
 
 <!-- Content ends -->
