Fix certum.pl link

--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@ description: "You can show your appreciation and support further development and
 <p>ConEmu-Maximus5 was brought to life and is supported by almost single developer efforts.
 The most valuable resource is time actually, hundreds of hours. But of course there are other expenses,
 minor or considerable: hardware used for developing and testing, digital certificate for signing
-ConEmu binaries (current one was obtained by courtesy of <a href="Certum.pl">Certum.pl</a>),
+ConEmu binaries (current one was obtained by courtesy of <a href="http://certum.pl">Certum.pl</a>),
 hosting... </p>
 
 <p>You can show your appreciation and support further development and maintaining by contributing with
