--- a/ru/Delusions.html
+++ b/ru/Delusions.html
@@ -10,7 +10,7 @@
 
 <p>Упрощая, консольное приложение это специальным образом созданное приложение которое взаимодействует с &quot;пользователем&quot; только посредством ввода-вывода данных (например текста). По умолчанию КП не умеет ничего &quot;отрисовывать&quot;, у него вообще нет графического интерфейса. Оно работает ТОЛЬКО с потоками ввода-вывода (перенаправление, пайпы, волшебные символы ‘<b>&lt;</b>’, ‘<b>&gt;</b>’, ‘<b>|</b>’).</p>
 
-<code>cmd /? > cmd.log & type cmd.log | find "HKEY"</code>
+<pre><code>cmd /? > cmd.log & type cmd.log | find "HKEY"</code></pre>
 
 <p>При запуске такого приложения в Windows создается специальное консольное окно и именно оно занимается отрисовкой текста, выводимого КП, и перенаправлением нажимаемых пользователем клавиш в буфер ввода КП. Это консольное окно также называется терминалом.</p>
 
