--- a/ru/Whats_New.html
+++ b/ru/Whats_New.html
@@ -37,7 +37,7 @@ or anything else, spreading the word for example.
 			Following example shows ‘New console’ dialog, and inserts into started
 			command prompt: ‘echo "Hello world"’.
 
-		<code>ConEmu.exe -Detached -GuiMacro "Create(0,1); Context; print(\"echo \\\"Hello world\\\"\");"</code>
+		<pre><code>ConEmu.exe -Detached -GuiMacro "Create(0,1); Context; print(\"echo \\\"Hello world\\\"\");"</code></pre>
 	</ul>
 </ul>
 
