--- a/ru/ConEmu.html
+++ b/ru/ConEmu.html
@@ -1,5 +1,10 @@
 ---
-title: ConEmu - эмулятор консольного окна Windows
+title: ConEmu - Удобный терминал для Windows
+
+description: "Простой ресайз окна консоли, максимизация и полноэкранный режим,
+   удобное копирование и вставка, табы и сплиты, опциональный Quake-режим,
+   быстрый доступ к любимым шеллам, удобный запуск консолей под администратором,
+   и многое другое"
 ---
 
 <!-- Content starts -->
