Add redirects from untranslated /ru pages

--- a/en/MemoryDump.html
+++ b/en/MemoryDump.html
@@ -1,5 +1,7 @@
 ---
 redirect_from: /en/MiniDump.html
+redirect_from: /ru/MiniDump.html
+redirect_from: /ru/MemoryDump.html
 ---
 
 <!-- Content starts -->
