Add redirects from untranslated /ru pages

--- a/en/DefaultTerminal.html
+++ b/en/DefaultTerminal.html
@@ -1,5 +1,7 @@
 ---
 redirect_from: /en/DefTerm.html
+redirect_from: /ru/DefTerm.html
+redirect_from: /ru/DefaultTerminal.html
 ---
 
 <!-- Content starts -->
