Clean up contents

--- a/ru/ConEmuFAQ.html
+++ b/ru/ConEmuFAQ.html
@@ -1,63 +1,7 @@
 ---
+title: ConEmu FAQ - Частые вопросы
 ---
 
-<!-- Content starts -->
-
-<html>
-
-<head>
-    <title>ConEmuFAQ</title>
-</head>
-<body>
-
-
-
-
-
-    <div id="wikipage">
-        <table>
-            <tr>
-
-
-                <td style="vertical-align:top; padding-left:5px">
-
-                    <div id="wikiheader">
-
-                        <span style="font-size:120%;font-weight:bold">ConEmuFAQ</span>
-                        &nbsp;
-                        <div>
-
-
-
-                            <br />
-
-
-                            <a href="ConEmuFAQ.html"
-                               title="en">en</a>
-                            ,
-
-
-
-                            <b>ru</b>
-
-
-
-                            <div id="wikiauthor" style="float:right">
-                                Updated <span title="Mon Feb  2 00:34:11 2015">
-                                    Feb 2, 2015
-                                </span>
-
-                                by
-
-                                <a class="userlink"
-                                   href="/u/116287257743594353797/">ConEmu.M...@gmail.com</a>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div id="wikicontent">
-                        <div class="vt" id="wikimaincol">
 <p><font size="4">Содержание</font> <ul><ul><li><a href="#О_главном">О главном</a></li><ul><li><a href="#Q._Что_делать,_если_нашли_ошибку?">Q. Что делать, если нашли ошибку?</a></li>
 <li><a href="#Q._А_как_же_ConMan_,_альтернативная_конс">Q. А как же ConMan , альтернативная консоль и пр.?</a></li>
 <li><a href="#Q._Для_чего_нужен_сертификат_ConEmu_.cer_(">Q. Для чего нужен сертификат ConEmu .cer (digital certificate)?</a></li>
@@ -494,20 +438,3 @@ cmd -cur_console:s2THn</pre>
 
 <h3><a name="Q._Для_консоли_ConEmu_не_всплывает_пере"></a>Q. Для консоли ConEmu не всплывает перевод GoldenDict<a href="#Q._Для_консоли_ConEmu_не_всплывает_пере" class="section_anchor"></a></h3>
 <p>A. Обновите GoldenDict до версии <a href="http://goldendict.org/forum/viewtopic.php?p=7835#p7835" rel="nofollow">1.0.1-271</a> или более поздней. </p>
-                        </div>
-                    </div>
-                </td>
-            <tr>
-        </table>
-    </div>
-
-
-
-    <script type="text/javascript" src="https://ssl.gstatic.com/codesite/ph/4119706131923068122/js/dit_scripts.js"></script>
-
-
-
-</body>
-</html>
-
-<!-- Content ends -->
