--- a/en/ConEmuEnvironment.html
+++ b/en/ConEmuEnvironment.html
@@ -1,4 +1,10 @@
 ---
+title: ConEmu Environment Variables
+
+description: "List of environment variables set by ConEmu.
+   Ability to export variables into console processes.
+   Cheating with system time and console code page.
+   Usage examples."
 ---
 
 <!-- Content starts -->
