--- a/ru/ConEmuEnvironment.html
+++ b/ru/ConEmuEnvironment.html
@@ -1,4 +1,10 @@
 ---
+title: ConEmu Environment Variables - Переменные Окружения
+
+description: "Список переменных окружения используемых в ConEmu.
+  Экспорт переменных в родительские процессы консолей.
+  Трюки с системным временем и кодовыми страницами консоли.
+  Примеры использования."
 ---
 
 <!-- Content starts -->
