Add redirects from untranslated /ru pages

--- a/en/ConEmuArgs.html
+++ b/en/ConEmuArgs.html
@@ -1,5 +1,7 @@
 ---
 redirect_from: /en/Command_Line.html
+redirect_from: /ru/Command_Line.html
+redirect_from: /ru/ConEmuArgs.html
 ---
 
 <!-- Content starts -->
