--- a/ru/AnsiEscapeCodes.html
+++ b/ru/AnsiEscapeCodes.html
@@ -1,4 +1,7 @@
 ---
+title: ConEmu и поддержка ANSI X3.64 / xterm-256
+
+description: "Список кодов ANSI последовательностей поддерживаемых в ConEmu. Xterm 256 и 24bit цветовые расширения. Примеры использования."
 ---
 
 <!-- Content starts -->
