--- a/en/AnsiEscapeCodes.html
+++ b/en/AnsiEscapeCodes.html
@@ -1,4 +1,7 @@
 ---
+title: ConEmu ANSI Support - X3.64 and xterm-256
+
+description: "List of ANSI sequences supported by ConEmu. Xterm 256 and 24bit colors extension. Usage examples."
 ---
 
 <!-- Content starts -->
