--- a/en/ConEmuClink.html
+++ b/en/ConEmuClink.html
@@ -1,4 +1,7 @@
 ---
+redirect_from: /en/ConEmu_Clink.html
+redirect_from: /ru/ConEmu_Clink.html
+redirect_from: /ru/ConEmuClink.html
 ---
 
 <!-- Content starts -->
