--- a/en/RoadMap.html
+++ b/en/RoadMap.html
@@ -56,6 +56,6 @@
 
 <h2><a name="History_in_cmd_and_powershell"></a>History in cmd and powershell<a href="#History_in_cmd_and_powershell" class="section_anchor"></a></h2>
 <p>Some users asks about any way to get it to remember history from previous sessions. This is complicated (but possible). For now, I can recommend: <ul><li>Far Manager as framework for cmd.exe: <a href="http://stackoverflow.com/a/10921470/1405560" rel="nofollow">http://stackoverflow.com/a/10921470/1405560</a> </li>
-<li><a href="ConEmu_Clink.html">Clink</a> for bash-style completion in cmd.exe. </li></ul></p>
+<li><a href="ConEmuClink.html">Clink</a> for bash-style completion in cmd.exe. </li></ul></p>
 
 <!-- Content ends -->
