Add index.html to /ru/ and /en/

--- a/en/index.html
+++ b/en/index.html
@@ -1,4 +1,5 @@
 ---
+redirect_from: /en/ConEmu.html
 title: ConEmu - Handy Windows Terminal
 
 description: "ConEmu-Maximus5 provides full-featured local terminal for Windows developers, administrators or users.
