--- a/ru/index.html
+++ b/ru/index.html
@@ -1,4 +1,5 @@
 ---
+redirect_from: /ru/ConEmu.html
 title: ConEmu - Удобный терминал для Windows
 
 description: "Простой ресайз окна консоли, максимизация и полноэкранный режим,
