Implement search control

--- a/search.html
+++ b/search.html
@@ -1,9 +1,10 @@
 ---
-title: ConEmu - search page
+title: ConEmu - search results
 ---
 
 <!-- Content starts -->
 
+<div>
 <script>
   (function() {
     var cx = '014346213573456449829:mmq1_nge2xw';
@@ -16,19 +17,7 @@ title: ConEmu - search page
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search></gcse:search>
-
-
-<form action="//conemu.github.io/search_results.html" id="cse-search-box">
-  <div>
-    <input type="hidden" name="cx" value="partner-pub-8810818700876198:9821569667" />
-    <input type="hidden" name="cof" value="FORID:10" />
-    <input type="hidden" name="ie" value="UTF-8" />
-    <input type="text" name="q" size="55" />
-    <input type="submit" name="sa" value="Search" />
-  </div>
-</form>
-
-<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
+<gcse:searchresults-only></gcse:searchresults-only>
+</div>
 
 <!-- Content ends -->
