Search results margin

--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@ title: ConEmu - search results
 
 <!-- Content starts -->
 
-<div>
+<div id="search-results">
 <script>
   (function() {
     var cx = '014346213573456449829:mmq1_nge2xw';
