--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ title: ConEmu - Handy Windows Terminal
 
 description: "ConEmu-Maximus5 provides full-featured local terminal for Windows developers, administrators or users.
    Tabs, splits, optional Quake style, handy copy and paste, ANSI, CJK, UTF-8, DosBox and PuTTY integration, and much more..."
+
+og_image: http://conemu.github.io/img/ConEmu-Maximus5.png
 ---
 
 
