--- a/en/index.html
+++ b/en/index.html
@@ -2,7 +2,7 @@
 redirect_from: /en/ConEmu.html
 title: ConEmu - Handy Windows Terminal
 
-description: "ConEmu-Maximus5 provides full-featured local terminal for Windows developers, administrators or users.
+description: "ConEmu-Maximus5 is a full-featured local terminal for Windows developers, administrators or users.
    Tabs, splits, optional Quake style, handy copy and paste, ANSI, CJK, UTF-8, DosBox and PuTTY integration, and much more..."
 ---
 
