Remove spare &nbsp;

--- a/en/TextSelection.html
+++ b/en/TextSelection.html
@@ -4,7 +4,7 @@ redirect_from: /ru/TextSelection.html
 
 <!-- Content starts -->
 
-<p>Under construction, <a title="Selection problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=887">&nbsp;Issue 887&nbsp;</a>, <a title="Selection problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1292">&nbsp;Issue 1292&nbsp;</a>, <a title="Can I use Ctrl+Shift+Arrow to select and delete text?"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1332">Issue 1332</a> </p>
+<p>Under construction, <a title="Selection problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=887">Issue 887&nbsp;</a>, <a title="Selection problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1292">Issue 1292&nbsp;</a>, <a title="Can I use Ctrl+Shift+Arrow to select and delete text?"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1332">Issue 1332</a> </p>
 <p>ConEmu allows marking console block (like real console <strong>Mark</strong> menu item, or Far Manager <strong>AltIns</strong> feature) and text (like standard GUI text editors), copying marked text to Windows Clipboard, pasting from Clipboard to console. </p>
 <p><strong>Note</strong>. Копирование выполняется &#x27;с экрана&#x27;, то есть с выделением в редакторе Far Manager не имеет ничего общего. </p>
 <p><img src="../img/SettingsSelection.png" title="ConEmu text selection settings"> </p>
