--- a/en/RoadMap.html
+++ b/en/RoadMap.html
@@ -28,7 +28,7 @@ redirect_from: /ru/RoadMap.html
 <p>This portion of code exists but not perfect. So, it is disabled in release versions. </p>
 
 <h2><a name="Tab_groups_and_themes"></a>Tab groups and themes<a href="#Tab_groups_and_themes" class="section_anchor"></a></h2>
-<p><a title="Themes, skins, tabs"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=294">Issue 294</a>, <a title="Double view / Split screen concept" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=194">&nbsp;Issue 194&nbsp;</a>. <ul><li>Tabs and toolbar themes </li>
+<p><a title="Themes, skins, tabs"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=294">Issue 294</a>, <a title="Double view / Split screen concept" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=194">Issue 194&nbsp;</a>. <ul><li>Tabs and toolbar themes </li>
 <li>Tabs reordering </li>
 <li>Tab groups (multiple visible consoles) </li>
 <li>Custom icons (icon of active process) in tabs </li></ul></p>
