--- a/en/TerminalVsShell.html
+++ b/en/TerminalVsShell.html
@@ -5,7 +5,7 @@ redirect_from: /ru/TerminalVsShell.html
 <!-- Content starts -->
 
 <p>Article is under construction </p>
-<p><a title="Selection problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=887">&nbsp;Issue 887&nbsp;</a>, <a title="Little different to start a putty session in ConEmu between through PLUS SIGN click and through Macro trigger"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1219">Issue 1219</a>, <a title="Selection problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1292">&nbsp;Issue 1292&nbsp;</a>, <a title="shift+left mouse selection does not select above visible windows (has to scroll buffer up)"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=823">Issue 823</a>#22 </p>
+<p><a title="Selection problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=887">Issue 887&nbsp;</a>, <a title="Little different to start a putty session in ConEmu between through PLUS SIGN click and through Macro trigger"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1219">Issue 1219</a>, <a title="Selection problem" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1292">Issue 1292&nbsp;</a>, <a title="shift+left mouse selection does not select above visible windows (has to scroll buffer up)"  href="http://code.google.com/p/conemu-maximus5/issues/detail?id=823">Issue 823</a>#22 </p>
 <p>Powershell &amp; bash both are shells. They do &quot;read-evaluate-print&quot; cycle, aka command execution. <a href="ConEmu.html">ConEmu</a> is terminal where U can run shells. </p>
 
 <!-- Content ends -->
